Update JPMS config after IntelliJ update to 2026.2
Run unit tests using classpath only in maven and IJ
Run integration tests using module path in maven only